# syrius-apps

./: west.yml
apps/CommonLibrary/ProtocolV4/: .gitignore  .gitmodules  README.md
apps/CommonLibrary/ProtocolV4/uavcan/: compileDSDL.py  setup.py
apps/CommonLibrary/ProtocolV4/uavcan/test_code/: cli_getversion.py  cli_motor_en.py  cli_motor_mode.py  cli_operate_remote.py  cli_setpidparam.py  cli_settarge.py  cli_softstop.py  cli_time_sync.py  sub_binarysignal.py  sub_err.py  sub_get_server.py  sub_heart.py  sub_motorstatus.py  sub_record.py
apps/CommonLibrary/algorithmlib/: fft.c  fft.h  filter.c  filter.h  pid.c  s_posi_planning.c  s_posi_planning.h  s_trajectory_planning.c  s_trajectory_planning.h  trajectory_planning.c  trajectory_planning.h
apps/CommonLibrary/motorcontrollib/: CMakeLists.txt
apps/CommonLibrary/motorcontrollib/drivers/: CMakeLists.txt
apps/CommonLibrary/motorcontrollib/drivers/currsmp/: CMakeLists.txt  currsmp_shunt_stm32.c  readme.md
apps/CommonLibrary/motorcontrollib/drivers/feedback/: CMakeLists.txt  feedback.c  stm32_abz.c  stm32_abz_hall.c  stm32_hall.c
apps/CommonLibrary/motorcontrollib/drivers/pwm/: CMakeLists.txt  pwm_stm32.c  pwm_stm32_cube.c  readme.md
apps/CommonLibrary/motorcontrollib/include/drivers/: currsmp.h  feedback.h  pwm.h
apps/CommonLibrary/motorcontrollib/lib/: CMakeLists.txt  Kconfig
apps/CommonLibrary/statemachine/: statemachine.c  statemachine.h
apps/super/: CMakeLists.txt  prj.conf  super.overlay
apps/super/drivers/can/: CMakeLists.txt
apps/super/drivers/can/canard/: canard_if.c
apps/super/src/: main.c  mc_thread.c
apps/superlift/: CMakeLists.txt  Kconfig  Kconfig.app
apps/superlift/drivers/can/: stm32_can.c
apps/superlift/src/: main.c
(+45 files in other folders)
